--- a/Chalkable.Web/assets/jade/activities/apps/AppMarketBase.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppMarketBase.jade
@@ -1,9 +1,10 @@
-mixin AppMarketToolbar(balance, categories, gradelevels, isStore)
+mixin AppMarketToolbar(balance, categories, gradelevels, isStore, needsStoreBtn)
     .action-bar.not-transparent.buttons
         .container.panel-bg.buttons-toolbar
             if balance
                 .user-balance= "$" + balance
-            +ActionLink('appmarket', 'list')(class = isStore ? "pressed" : "").app-store.toolbar-btn App Store
+            storeBtnCls = needsStoreBtn ? "pressed-app-store" : "pressed"
+            +ActionLink('appmarket', 'list')(class = isStore ? storeBtnCls : "").app-store.toolbar-btn App Store
             +ActionLink('appmarket', 'myApps').my-apps.toolbar-btn My Apps
             //+ActionLink('funds', 'view')(class = isStore ? "" : "pressed").toolbar-btn App Funds
             +ActionForm('', '')
