--- a/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
@@ -480,7 +480,8 @@ BODY.student #first-login-overlay{
       }
 
       P {
-        margin: 0px 5px 12px 0;
+        margin: 0px 5px 0 0;
+        padding-bottom: 12px;
         font-size: 12px;
         color: #706f6f;
         text-shadow: 1px -1px 0px white;
