--- a/Chalkable.Web/assets/jade/activities/profile/SchoolPersonProfileSummaryView.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/SchoolPersonProfileSummaryView.jade
@@ -9,5 +9,6 @@ user = self.getUser()
                     +PersonImg(user, 256, true)
                     .grades-container
             #student-info-panel
-                h1.display-name=user.getDisplayName() || user.getFullName()
+                displayName =user.getDisplayName() || user.getFullName()
+                h1.display-name(data-tooltip=displayName, data-tooltip-type="overflow")=displayName
                 .status=self.getStatusText()
