--- a/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
@@ -10,7 +10,8 @@ statusData = self.getStatusData()
                 .img-container
                     +PersonImg(user, 256, true)
             #student-info-panel
-                h1.display-name=user.getDisplayName() || user.getFullName()
+                displayName =user.getDisplayName() || user.getFullName()
+                h1.display-name(data-tooltip=displayName, data-tooltip-type="overflow")=displayName
                 .status
                     div(class=statusData.status, data-tooltip=statusData.statusName)
                     |#{user.getCurrentClassName()}
