fixed for CHLK-2963 Teacher. Grades. Grid. "Edited icon" will appear unexpectedly

--- a/Chalkable.Web/assets/jade/activities/grading/FinalGradeStudentBlock.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/FinalGradeStudentBlock.jade
@@ -124,7 +124,7 @@ div(class=(selected ? "opened" : "")).attachments-container.z-10
                     .grade=value
                         if value || parseInt(value, 10) == 0
                             .circle
-                                div(data-tooltip="The suggested grade is the system calculated average determined by your iNow settings Blah") ?
+                                div(data-tooltip="The suggested grade is the system calculated average determined by your iNow settings") ?
             .disciplines-block
                 h2=Msg.Discipline
                 if self.getDisciplines()
