fixed for CHLK-2535 Teacher: Attendance: class selected > Seating Chart
UPDATE
 4/11/14 -   Still does NOT show popup if you mark some students then navigate away

--- a/Chalkable.Web/assets/jade/activities/attendance/ClassAttendanceWithSeatPlace.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassAttendanceWithSeatPlace.jade
@@ -2,14 +2,18 @@ if self.getStudent()
     typeName = self.getTypeName()
     reason = self.getAttendanceReason()
     type = self.getType()
+    reasonId = self.getAttendanceReasonId() ? self.getAttendanceReasonId().valueOf() : null
+    level = reason ? reason.getLevel(type) : null
     div(class=typeName ? typeName.toLowerCase() : '').not-empty
         .remove-red-btn.remove-student
         student = self.getStudent()
         A(
             data-id=student.getId().valueOf(),
             data-type=type,
-            data-level=reason ? reason.getLevel(type) : null,
-            data-reason-id=self.getAttendanceReasonId() ? self.getAttendanceReasonId().valueOf() : null,
+            data-level=level,
+            data-old-level=level,
+            data-reason-id=reasonId,
+            data-old-reason-id=reasonId,
             data-reason-text=reason ? reason.getName() : null
         ).image-container.white.shadow.attendance-data
             .reason-container
