--- a/Chalkable.Web/assets/jade/activities/grading/FinalGradeStudentBlock.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/FinalGradeStudentBlock.jade
@@ -2,7 +2,13 @@ student = self.getStudent()
 selected = self.isSelected()
 avg = self.getModel().getCurrentStudentAverage()
 value = avg.displayAvgGradeValue(false, true)
-div(index=self.getIndex(), class=(selected ? "selected" : ""), data-student-id=student.getId().valueOf()).row.fixed-bg
+div(
+    index = self.getIndex(),
+    class = (selected ? "selected" : ""),
+    data-student-id = student.getId().valueOf(),
+    data-able-edit = self.isAbleEdit(),
+    data-able-edit-direct-value = self.isAbleEditDirectValue()
+).row.fixed-bg
     +ActionForm('grading', 'updateStudentAvgFromFinalPage').grading-form.avg-form.update-grade-form
         .top-content
             +ProfileLink(student, 'student')(data-tooltip=student.getFullName()).left.image-container.white.shadow
