fixed for CHLK-3012 Teacher. Grades. What should we show if a student doesn't have an item or a standard? The list of students like in Inow

--- a/Chalkable.Web/assets/jade/activities/grading/GradingClassSummaryPart.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingClassSummaryPart.jade
@@ -7,7 +7,11 @@
                     .collapse
                 .mp-data
                     .ann-types-container
-                        +LeftRightToolbar(item.getItems(), chlk.templates.grading.GradingClassStandardItemTpl)(
-                            needDots = true,
-                            roundedDots = true
-                        ).big-arrows
+                        items = item.getItems()
+                        if !items.length
+                            .no-items-text=Msg.No_grades_yet
+                        else
+                            +LeftRightToolbar(items, chlk.templates.grading.GradingClassStandardItemTpl)(
+                                needDots = true,
+                                roundedDots = true
+                            ).big-arrows
