--- a/Chalkable.Web/assets/jade/activities/grading/GradingPeriodFinalGrade.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingPeriodFinalGrade.jade
@@ -1,3 +1,4 @@
+items = self.getStudentFinalGrades()
 selectedIndex = self.getSelectedIndex()
 gradingPeriod = self.getGradingPeriod()
 +ActionForm('grading', 'loadGradingPeriodFinalGradesSummary').load-grading-period
@@ -5,26 +6,30 @@ gradingPeriod = self.getGradingPeriod()
     +Hidden('gradingPeriodId', gradingPeriod.getId().valueOf())
     +Hidden('selectedIndex', selectedIndex).selected-value
     .gp-title-block
-        .grading-selects.no-loading
-            +Select('averageId').avg-select
-                each item in self.getAverages()
-                    +Option(item.getAverageId().valueOf(), item.getAverageName(), item.getAverageId() == self.getCurrentAverage().getAverageId())
+        if items.length
+            .grading-selects.no-loading
+                +Select('averageId').avg-select
+                    each item in self.getAverages()
+                        +Option(item.getAverageId().valueOf(), item.getAverageName(), item.getAverageId() == self.getCurrentAverage().getAverageId())
         .gp-title=gradingPeriod.getFinalTitleText()
-        if self.isAbleEdit() && gradingPeriod.isAblePostGradeBook()
-            +ActionLinkButton('grading','postGradeBook', self.getClassId(), gradingPeriod.getId(), null, null, true).message-button.blue-gradient-btn.post-gradebook-button.no-loading=Msg.Post
+        if items.length
+            if self.isAbleEdit() && gradingPeriod.isAblePostGradeBook()
+                +ActionLinkButton('grading','postGradeBook', self.getClassId(), gradingPeriod.getId(), null, null, true).message-button.blue-gradient-btn.post-gradebook-button.no-loading=Msg.Post
         .gp-triangle
 div(class = (self.isAvgChanged() ? "opened slided" : "")).gp-data
-    items = self.getStudentFinalGrades()
-    isAbleDisplayAlphaGrades = true
-    +ListView(items)(
-        selectedIndex = selectedIndex
-    ).grades-individual.people-list.final-grid
-        each item, i in items
-            +RenderWith(item, chlk.templates.grading.FinalGradeStudentBlockTpl)(
-                selected = selectedIndex == i,
-                ableEdit = self.isAbleEdit(),
-                ableEditDirectValue = self.isAbleEditDirectValue(),
-                index = i,
-                gradingPeriodId = gradingPeriod.getId(),
-                gradingComments = self.getGradingComments()
-            )
+    if !items.length
+        .no-items-text=Msg.No_grades_yet
+    else
+        isAbleDisplayAlphaGrades = true
+        +ListView(items)(
+            selectedIndex = selectedIndex
+        ).grades-individual.people-list.final-grid
+            each item, i in items
+                +RenderWith(item, chlk.templates.grading.FinalGradeStudentBlockTpl)(
+                    selected = selectedIndex == i,
+                    ableEdit = self.isAbleEdit(),
+                    ableEditDirectValue = self.isAbleEditDirectValue(),
+                    index = i,
+                    gradingPeriodId = gradingPeriod.getId(),
+                    gradingComments = self.getGradingComments()
+                )
