--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridStandards.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridStandards.jade
@@ -40,31 +40,34 @@
                     .collapse
                 .mp-data
                     .ann-types-container
-                        .dotted-container.name-container.with-horizontal-dots
-                            .type-name=Msg.Student(true)
-                            each student,i in item.getStudents()
-                                name = student.getStudentInfo().getDisplayName()
-                                div(row-index=i).student-name
-                                    div(data-tooltip=name, data-tooltip-type="overflow").dotted-h=name
-                                    if student.isWithdrawn()
-                                        div(data-tooltip="Withdrawn").withdrawn
-                        +LeftRightToolbar()(
-                            needDots = true,
-                            roundedDots = true,
-                            padding = 77
-                        ).grid-toolbar.i-b.big-arrows
-                            each gradingItem in item.getGradingItems()
-                                .dotted-container.grade-container.with-horizontal-dots
-                                    title = gradingItem.getTitle()
-                                    div(data-tooltip=title, data-tooltip-type="overflow").type-name=title
-                                    each info,i in gradingItem.getItems()
-                                        div(
-                                            row-index=i,
-                                            data-student-id=info.getStudentId().valueOf(),
-                                            data-standard-id=info.getStandardId().valueOf(),
-                                            data-grading-period-id=gradingPeriod.getId().valueOf()
-                                            class=((self.getAlphaGrades() && self.getAlphaGrades().length && self.isAbleEdit()) ? 'gradable' : '')
-                                        ).dotted-h.grade-value.letter
-                                            +RenderWith(info, chlk.templates.grading.TeacherClassGradingGridStandardsItemTpl)(
-                                                ableEdit = self.isAbleEdit()
-                                            )
+                        if !item.getGradingItems().length || !item.getStudents().length
+                            .no-items-text=Msg.No_grades_yet
+                        else
+                            .dotted-container.name-container.with-horizontal-dots
+                                .type-name=Msg.Student(true)
+                                each student,i in item.getStudents()
+                                    name = student.getStudentInfo().getDisplayName()
+                                    div(row-index=i).student-name
+                                        div(data-tooltip=name, data-tooltip-type="overflow").dotted-h=name
+                                        if student.isWithdrawn()
+                                            div(data-tooltip="Withdrawn").withdrawn
+                            +LeftRightToolbar()(
+                                needDots = true,
+                                roundedDots = true,
+                                padding = 77
+                            ).grid-toolbar.i-b.big-arrows
+                                each gradingItem in item.getGradingItems()
+                                    .dotted-container.grade-container.with-horizontal-dots
+                                        title = gradingItem.getTitle()
+                                        div(data-tooltip=title, data-tooltip-type="overflow").type-name=title
+                                        each info,i in gradingItem.getItems()
+                                            div(
+                                                row-index=i,
+                                                data-student-id=info.getStudentId().valueOf(),
+                                                data-standard-id=info.getStandardId().valueOf(),
+                                                data-grading-period-id=gradingPeriod.getId().valueOf()
+                                                class=((self.getAlphaGrades() && self.getAlphaGrades().length && self.isAbleEdit()) ? 'gradable' : '')
+                                            ).dotted-h.grade-value.letter
+                                                +RenderWith(info, chlk.templates.grading.TeacherClassGradingGridStandardsItemTpl)(
+                                                    ableEdit = self.isAbleEdit()
+                                                )
