--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -480,6 +480,12 @@ BODY {
                   }
                 }
 
+                &.no-items{
+                  .chzn-container-single{
+                    display: none;
+                  }
+                }
+
                 &:not(.open){
                   .mp-data{
                     visibility: hidden;
@@ -1810,7 +1816,12 @@ BODY {
 }
 
 .no-items-text{
-  font: bold 22px/60px 'Reenie Beanie';
+  font: bold 22px/260px 'Reenie Beanie';
   text-align: center;
-  height: 60px;
+  height: 260px;
+
+  &.small{
+    font: bold 22px/60px 'Reenie Beanie';
+    height: 60px;
+  }
 }
