--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
@@ -35,7 +35,7 @@ classes = self.getClassInfo() ? self.getClassInfo().getTypesByClass() : []
 .announcement-form.loader-container
     .loader
     if announcement
-        +ActionForm('announcement', 'save')(onlySubmitValidate=true)
+        +ActionForm('announcement', 'save')(onlySubmitValidate=true).no-working
             +LeftRightToolbar(topItems, chlk.templates.classes.TopBar)(
                 selectedItemId=topData.getSelectedItemId(),
                 pressAfterClick=!announcement.getState(),
