--- a/Chalkable.Web/assets/jade/activities/people/UsersGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersGrid.jade
@@ -6,7 +6,8 @@ Button(type="submit", class="scroll-start-button x-hidden", name="submitType", v
     infiniteScroll = true,
     goTopButton = true, loadAllButtonTitle = 'LOAD ALL ' + self.getRolesText().toUpperCase(),
     loadAllPopUpTitle = self.getRolesText(),
-    needGoToButton = true, needLoadAllButton = true).people-list
+    needGoToButton = true, needLoadAllButton = true
+)(data-has-access = self.isHasAccess()).people-list
     +RenderWith(self.getUsers(), chlk.templates.people.UsersForGridTpl)(
         userRole = self.getUserRole(),
         currentUser = self.getCurrentUser(),
