fixed CHLK-2884 [related with 53 823] Grade Activity - Entering an alternative score that is excluded from averaging will affect the class average in Chalkable

--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
@@ -14,7 +14,8 @@ mixin TeacherClassGradingGridSummaryCell(info, maxScore, gradable)
         data-isexempt= info.isExempt(),
         data-isabsent= info.isAbsent(),
         data-isincomplete= info.isIncomplete(),
-        data-comment= info.getComment()
+        data-comment= info.getComment(),
+        data-isincludeinaverage=info.isIncludeInAverage()
     ).grade-info
         span(data-grade-value=info.getGradeValue()).grade-text=normalValue
         cls = info.getAlertClass(maxScore, true)
