fixed for CHLK-2895 [related with 53 751] With a max value grid (99 x99) in INOW, the page takes only 3-4 seconds to load... In Chalkable, the same grid takes 20 seconds or longer

--- a/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
@@ -66,25 +66,26 @@ div(class=showButtons ? 'can-post' : '').page-content
                 ).seating-toolbar.auto-h.big-arrows
                     -var emptyModel = new chlk.models.attendance.ClassAttendance
                     -var caTpl = new chlk.templates.attendance.ClassAttendanceWithSeatPlaceTpl
-                    each items in seatingList
-                        .seating-row
-                            each item in items
-                                info = item.getInfo()
-                                if info && info.getAttendanceReason()
-                                    -console.log(info, info.getAttendanceReason(), info.getAttendanceReason().getAttendanceLevelReasons())
-                                column = item.getColumn()
-                                row = item.getRow()
-                                div(
-                                    data-index= item.getIndex(),
-                                    data-column= column,
-                                    data-row= row,
-                                    class=info ? '' : 'empty-box'
-                                ).student-block.droppable.draggable
-                                    -caTpl.assign(info || emptyModel)
-                                    !=caTpl.render()
-                                    //+RenderWith(info || emptyMdel, chlk.templates.attendance.ClassAttendanceWithSeatPlaceTpl)
-                                if info
-                                    .empty-box.student-block.absolute
+                    div(data-columns=self.getColumns(), data-rows=self.getRows()).droppable
+                        each items in seatingList
+                            .seating-row
+                                each item in items
+                                    info = item.getInfo()
+                                    if info && info.getAttendanceReason()
+                                        -console.log(info, info.getAttendanceReason(), info.getAttendanceReason().getAttendanceLevelReasons())
+                                    column = item.getColumn()
+                                    row = item.getRow()
+                                    div(
+                                        data-index= item.getIndex(),
+                                        data-column= column,
+                                        data-row= row,
+                                        class=info ? '' : 'empty-box'
+                                    ).student-block.draggable
+                                        -caTpl.assign(info || emptyModel)
+                                        !=caTpl.render()
+                                        //+RenderWith(info || emptyMdel, chlk.templates.attendance.ClassAttendanceWithSeatPlaceTpl)
+                                    if info
+                                        .empty-box.student-block.absolute
     else
         .black-arrow.no-class-scheduled Selected class is not scaduled in current Term
 typesEnum = chlk.models.attendance.AttendanceTypeEnum
