fixed CHLK-3064 Class profile: add full class name in tooltip

--- a/Chalkable.Web/assets/jade/activities/class/ClassInfo.jade
+++ b/Chalkable.Web/assets/jade/activities/class/ClassInfo.jade
@@ -8,7 +8,7 @@ classInfo = self.getClassInfo()
             h1.info.with-line
                 .class-icon-container
                     +ClassImg(classInfo, 45, 80)
-                =classInfo.getName()
+                span.className(data-tooltip=classInfo.getFullClassName())=classInfo.getName()
             h2
                 div
         .detail-info
