fixed for CHLK-2901 [54 754] Attendance Summary - Graph needs labled

--- a/Chalkable.Web/assets/sass/partials/main/_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_attendance.scss
@@ -1136,7 +1136,8 @@ BODY {
     .wide-chart-bg{
       top: 12px;
       height: auto;
-      background-position: 0px 10px;
+      background-position: 30px 14px;
+      background-size: 95% 72%;
     }
   }
 
